# PRISM-LBS

./: .gitignore  COMPLETE_FILE_MANIFEST.txt  Cargo.toml  Dockerfile  EXACT_FILES_USED.txt  PARAMETER_REFERENCE_CARD.txt  PRISM_CLI_BINARY_SOURCE_FILES.txt  PRISM_COMPLETE_FILE_LIST.txt  README.md  START_HERE.txt  TELEMETRY_FINDINGS_VISUAL.txt  ULTRA_WHCR_QUICK_REFERENCE.txt  beat_all_records.sh  build.rs  compare_configs.sh  compile_all_ptx.sh  compile_ptx.sh  debug_run.sh  demo_cma_es.rs  dsjc250_world_record.csv  dsjc250_world_record.json  dsjc250_wr_attempt.json  finalize_integration.sh  libprism_ai.d  manual_rebuild.txt  monitor_validation.sh  nipah_inhibitor_1.fasta  nipah_inhibitor_2.fasta  nipah_inhibitor_3.fasta  nipah_inhibitor_4.fasta  nipah_inhibitor_5.fasta  nipah_inhibitor_candidates.json  overnight_marathon.sh  profile.json  profiler_report.json  quick_test.sh  rebuild.sh  rebuild_all.sh  rebuild_with_repair.sh  run_17.sh  (+14 more)
.claude/: AUTO_ACCEPT_CONFIG.md
.claude/agents/: prism-architect.md  prism-config-wiring.md  prism-gpu-specialist.md  prism-hypertuner-2.md  prism-hypertuner.md
artifacts/: 128_attempt_results.txt  COMPARATIVE_ANALYSIS.md  FIXES_SUMMARY.txt  PROGRESS_SUMMARY.md  STATUS.txt
artifacts/fluxnet/: README.md  baseline_results_summary.txt
artifacts/telemetry/: sample_telemetry.jsonl
benchmarks/: bench_manifest.json
benchmarks/biomolecular/: nipah_glycoprotein.fasta
campaigns/world_record_20251123_003000/: state.json
configs/: dsjc250_memetic.toml.bak_20251119
dashboards/: prism-gpu-performance.json
docs/: FALLBACK_QUICK_REFERENCE.md  FALLBACK_SCENARIOS.md  GPU_QUANTUM_MODULES_CHECKLIST.md  RESULT_PARSING.md  WR_DENSE_GRAPH_AUDIT.md  WR_MASK_AUDIT.md  active_inference_integration.md  bugfix_gpu_context_type_mismatch.md  deep_coupling_integration_notes.md  fluxnet_retraining_spec.md  gpu_quickstart.md  monitoring.md  phase0_ensemble_implementation.md  phase3_quantum_gpu.md  warmstart_cli_usage.md  warmstart_overview.md
docs/rfc/: RFC-M0-Meta-Foundations.md  (+1 more)
examples/: cma_demo.rs  cma_es_demo.rs
foundation/: adaptive_coupling.rs  coupling_physics.rs  cuda_bindings.rs  gpu_coloring.rs  gpu_ffi.rs  gpu_runtime.cu  lib.rs  mlir_runtime.cpp  mlir_runtime.rs  phase_causal_matrix.rs  platform.rs  system.rs  types.rs
foundation/prct-core/: Cargo.toml
foundation/prct-core/examples/: dimacs_gpu_benchmark.rs  gpu_graph_coloring.rs  world_record_dsjc1000.rs
foundation/prct-core/src/: geodesic.rs  gpu_active_inference.rs  gpu_kuramoto.rs  gpu_quantum.rs  gpu_quantum_annealing.rs  gpu_quantum_multi.rs  gpu_thermodynamic.rs  gpu_thermodynamic_multi.rs  gpu_transfer_entropy.rs  iterative_controller.rs  lib.rs  memetic_coloring.rs  quantum_coloring.rs  transfer_entropy_coloring.rs  world_record_pipeline.rs
foundation/prct-core/src/adapters/: coupling_adapter.rs  neuromorphic_adapter.rs  quantum_adapter.rs
foundation/prct-core/src/gpu/: event.rs  multi_device_pool.rs  state.rs  stream_pool.rs
foundation/prct-core/tests/: quantum_gpu.rs
prism-cli/: Cargo.toml
prism-core/: Cargo.toml
prism-core/src/: errors.rs  lib.rs  traits.rs
prism-fluxnet/: Cargo.toml
prism-gnn/: Cargo.toml
prism-gpu/: Cargo.toml  build.rs
prism-gpu/src/: cma_es.rs  context.rs  dendritic_whcr.rs  lib.rs  multi_gpu.rs  thermodynamic.rs  whcr.rs
prism-gpu/src/kernels/lbs/: distance_matrix.cu  pocket_clustering.cu  surface_accessibility.cu
prism-gpu/tests/: bench_tda.rs  cma_es_convergence_test.rs  context_tests.rs  dendritic_reservoir_integration.rs  floyd_warshall_integration.rs  md_convergence_test.rs  whcr_memory_test.rs
prism-lbs/: Cargo.toml
prism-lbs/benches/: lbs_benchmarks.rs
prism-lbs/src/: lib.rs  pipeline_integration.rs
prism-lbs/src/features/: electrostatics.rs  mod.rs
prism-lbs/src/graph/: protein_graph.rs
prism-lbs/src/phases/: whcr_refinement.rs
prism-lbs/src/pocket/: detector.rs  mod.rs  properties.rs
prism-lbs/src/scoring/: composite.rs
prism-lbs/src/structure/: pdb_parser.rs  surface.rs
prism-lbs/src/validation/: metrics.rs  mod.rs
prism-pipeline/: Cargo.toml
reports/: geometry_stress_performance.md  gpu_performance_log.md  phase1_gpu_acceleration_report.md
scripts/: analyze_campaign_results.sh  analyze_hypertuning.py  analyze_profiles.sh  collect_fluxnet_data.sh  compare_profiles.sh  compile_all_ptx.sh  compile_ptx.sh  hypertuner_v2.sh  launch_run3.sh  monitor_campaign.sh  profile_all_pipelines.sh  profile_docker.sh  profile_prism_binary.sh  profile_single_pipeline.sh  run_ultra_aggressive_whcr.sh  setup_dev_env.sh  train_fluxnet_dsjc250.sh  verify_build.sh  watch_and_launch_run3.sh  world_record_campaign.sh
src/: advanced_prism_solver.rs  lib.rs  protein.rs
staging_cleanup/: README.md
tests/: cma_integration.rs  metaphysical_coupling.rs
(+760 files in other folders)
