[package]
name = "prism-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
prism-core = { workspace = true }

# GPU acceleration
cudarc = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Thread-safe data structures
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography (for PTX signature verification)
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
# Testing utilities
env_logger = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[build-dependencies]
# Cryptography for PTX signing
sha2 = { workspace = true }
hex = { workspace = true }

[features]
cuda = []
