[package]
name = "prism-lbs"
version = "0.1.0"
edition = "2021"
authors = ["PRISM AI Team"]
description = "Ligand Binding Site prediction using PRISM's quantum-neuromorphic-GPU architecture"
license = "MIT"
repository = "https://github.com/prism-ai/prism-lbs"
keywords = ["protein", "binding-sites", "drug-discovery", "gpu", "quantum"]

[dependencies]
# Core dependencies
prism-core = { path = "../prism-core" }
prism-phases = { path = "../prism-phases" }
prism-gpu = { path = "../prism-gpu", features = ["cuda"] }

# Scientific computing
ndarray = "0.15"
ndarray-rand = "0.14"
nalgebra = "0.32"
num-traits = "0.2"
statrs = "0.16"

# Async and parallelism
tokio = { version = "1.28", features = ["full"] }
rayon = "1.7"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
pprof = { version = "0.13", optional = true }
pyo3 = { version = "0.20", optional = true, features = ["extension-module"] }

# CLI and logging
clap = { version = "4.3", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
colored = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
itertools = "0.11"
ordered-float = "3.9"
petgraph = "0.6"
indexmap = "2.0"
regex = "1.9"
lazy_static = "1.4"

# GPU support
cudarc = { version = "0.9", optional = true }

# Biochemistry
bio = "1.3"
bio-types = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.2"
approx = "0.5"
tempfile = "3.8"

[features]
default = ["cuda"]
cuda = ["cudarc", "prism-gpu/cuda"]
profile = ["dep:pprof"]
python-bindings = ["pyo3"]

[lib]
name = "prism_lbs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "prism-lbs"
path = "src/bin/main.rs"

[[bin]]
name = "prism-lbs-benchmark"
path = "src/bin/benchmark.rs"

[[bench]]
name = "lbs_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
