[package]
name = "prct-core"
version = "0.1.0"
edition = "2021"
authors = ["ARES Team"]
description = "Phase Resonance Chromatic-TSP (PRCT) Domain Logic"

[features]
default = []
cuda = ["cudarc", "neuromorphic-engine"]

[dependencies]
# Domain dependencies - MINIMAL, only what's essential
shared-types = { path = "../shared-types", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# For algorithm implementation (not infrastructure)
ndarray = "0.15"
rayon = "1.10"  # Parallel CPU algorithms
rand = "0.8"     # For simulated annealing
rand_chacha = "0.3"  # For deterministic RNG
num-complex = "0.4"  # For quantum adapter
bincode = "1.3"  # For FluxNet Q-table serialization

# Adapters - connect to infrastructure
neuromorphic-engine = { path = "../neuromorphic", features = ["cuda"], optional = true }
cudarc = { version = "0.9", features = ["std"], optional = true }
chrono = "0.4"
crossbeam-channel = "0.5"  # For telemetry channels

# GPU acceleration (optional) - relies on parent workspace cudarc
# cudarc is provided by parent crate, not declared here

[dev-dependencies]
# For testing with mocks
tokio = { version = "1.0", features = ["full", "test-util"] }
